fixed getsolar url textbox on IE

--- a/app/assets/client/css/grid.scss
+++ b/app/assets/client/css/grid.scss
@@ -308,7 +308,7 @@
 
     input {
       color: transparent;
-      background-color: initial;
+      background: #efefef;
       position: initial;
       z-index: inherit;
       width: 100%;
